--- a/NoSQL_setup_starter.ipynb
+++ b/NoSQL_setup_starter.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "id": "3ecdd008",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "id": "59390c4a",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "id": "7f9ececa",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['admin', 'autosaurus', 'classDB', 'config', 'epa', 'fruits_db', 'gardenDB', 'local', 'met', 'petitly_markering', 'petsitly_marketing', 'uk_food']\n"
+      "['admin', 'autosaurus', 'classDB', 'config', 'epa', 'fruits_db', 'gardenDB', 'local', 'met', 'petsitly_marketing', 'uk_food']\n"
      ]
     }
    ],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "id": "71e373c1",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "id": "ef1b89ed",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "id": "6a0d92df",
    "metadata": {},
    "outputs": [
@@ -110,32 +110,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'AddressLine1': 'East Cliff Pavilion',\n",
-      " 'AddressLine2': 'Wear Bay Road',\n",
-      " 'AddressLine3': 'Folkestone',\n",
-      " 'AddressLine4': 'Kent',\n",
-      " 'BusinessName': 'The Pavilion',\n",
+      "{'AddressLine1': '1 The Droveway',\n",
+      " 'AddressLine2': 'St Margarets Bay',\n",
+      " 'AddressLine3': 'Kent',\n",
+      " 'AddressLine4': '',\n",
+      " 'BusinessName': 'FirstLight Bar & Café',\n",
       " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
       " 'ChangesByServerID': 0,\n",
-      " 'Distance': 4591.765489457773,\n",
-      " 'FHRSID': 1043695,\n",
-      " 'LocalAuthorityBusinessID': 'PI/000073616',\n",
-      " 'LocalAuthorityCode': '188',\n",
-      " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
-      " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
-      " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
+      " 'Distance': 4587.64041272672,\n",
+      " 'FHRSID': 1290215,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000083029',\n",
+      " 'LocalAuthorityCode': '182',\n",
+      " 'LocalAuthorityEmailAddress': 'publicprotection@dover.gov.uk',\n",
+      " 'LocalAuthorityName': 'Dover',\n",
+      " 'LocalAuthorityWebSite': 'http://www.dover.gov.uk/',\n",
       " 'NewRatingPending': False,\n",
       " 'Phone': '',\n",
-      " 'PostCode': 'CT19 6BL',\n",
-      " 'RatingDate': '2018-04-04T00:00:00',\n",
+      " 'PostCode': 'CT15 6DH',\n",
+      " 'RatingDate': '2020-11-09T00:00:00',\n",
       " 'RatingKey': 'fhrs_5_en-gb',\n",
-      " 'RatingValue': 5,\n",
+      " 'RatingValue': '5',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('65f9e3aedabd5c6bf575d77b'),\n",
-      " 'geocode': {'latitude': 51.083812, 'longitude': 1.195625},\n",
-      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
+      " '_id': ObjectId('65fb1a07e9d2eeba4b156ce0'),\n",
+      " 'geocode': {'latitude': '51.150625', 'longitude': '1.378231'},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1290215',\n",
       "            'rel': 'self'}],\n",
       " 'meta': {'dataSource': None,\n",
       "          'extractDate': '0001-01-01T00:00:00',\n",
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "id": "11c9f11b",
    "metadata": {},
    "outputs": [],
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "id": "c2da7648",
    "metadata": {},
    "outputs": [],
@@ -222,17 +222,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "id": "a6e5cece",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "InsertOneResult(ObjectId('65fa0b42ba72df4ecd620d2b'), acknowledged=True)"
+       "InsertOneResult(ObjectId('65fb1a0ee4dbf8dd0e2f6f98'), acknowledged=True)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "id": "63bb10f9",
    "metadata": {},
    "outputs": [
@@ -269,7 +269,7 @@
       " 'PostCode': 'SE18 7DY',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('65fa0b42ba72df4ecd620d2b'),\n",
+      " '_id': ObjectId('65fb1a0ee4dbf8dd0e2f6f98'),\n",
       " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
       " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
      ]
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "id": "93c63829",
    "metadata": {},
    "outputs": [
@@ -320,17 +320,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "id": "7f599f3d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "UpdateResult({'n': 1, 'nModified': 0, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
+       "UpdateResult({'n': 1, 'nModified': 1, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,14 +342,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "id": "a6ad16f7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('65f9e8bc23b584e8d971a3e7'),\n",
+       "{'_id': ObjectId('65fb1a0ee4dbf8dd0e2f6f98'),\n",
        " 'BusinessName': 'Penang Flavours',\n",
        " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
        " 'BusinessTypeID': 1,\n",
@@ -365,14 +365,13 @@
        " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
        " 'scores': {'Hygiene': '', 'Structural': '', 'ConfidenceInManagement': ''},\n",
        " 'SchemeType': 'FHRS',\n",
-       " 'geocode': {'longitude': 0.08384, 'latitude': 51.490142},\n",
+       " 'geocode': {'longitude': '0.08384000', 'latitude': '51.49014200'},\n",
        " 'RightToReply': '',\n",
        " 'Distance': 4623.972328074718,\n",
-       " 'NewRatingPending': True,\n",
-       " 'RatingValue': None}"
+       " 'NewRatingPending': True}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "id": "768474a6",
    "metadata": {},
    "outputs": [
@@ -400,7 +399,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of documents with LocalAuthorityName as 'Dover': 0\n"
+      "Number of documents with LocalAuthorityName as 'Dover': 994\n"
      ]
     }
    ],
@@ -412,17 +411,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "id": "a11d5f1b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DeleteResult({'n': 0, 'ok': 1.0}, acknowledged=True)"
+       "DeleteResult({'n': 994, 'ok': 1.0}, acknowledged=True)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "id": "2a51aba0",
    "metadata": {},
    "outputs": [
@@ -454,38 +453,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "id": "8c356f7b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('65f9e3aedabd5c6bf575d77b'),\n",
-       " 'FHRSID': 1043695,\n",
+       "{'_id': ObjectId('65fb1a07e9d2eeba4b156fc1'),\n",
+       " 'FHRSID': 647177,\n",
        " 'ChangesByServerID': 0,\n",
-       " 'LocalAuthorityBusinessID': 'PI/000073616',\n",
-       " 'BusinessName': 'The Pavilion',\n",
-       " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
-       " 'BusinessTypeID': 1,\n",
-       " 'AddressLine1': 'East Cliff Pavilion',\n",
-       " 'AddressLine2': 'Wear Bay Road',\n",
-       " 'AddressLine3': 'Folkestone',\n",
-       " 'AddressLine4': 'Kent',\n",
-       " 'PostCode': 'CT19 6BL',\n",
+       " 'LocalAuthorityBusinessID': 'PI/000041489',\n",
+       " 'BusinessName': 'Wear Bay Bowls Club',\n",
+       " 'BusinessType': 'Pub/bar/nightclub',\n",
+       " 'BusinessTypeID': 7843,\n",
+       " 'AddressLine1': 'Wear Bay Road',\n",
+       " 'AddressLine2': 'Folkestone',\n",
+       " 'AddressLine3': 'Kent',\n",
+       " 'AddressLine4': '',\n",
+       " 'PostCode': 'CT19 6PY',\n",
        " 'Phone': '',\n",
-       " 'RatingValue': 5,\n",
-       " 'RatingKey': 'fhrs_5_en-gb',\n",
-       " 'RatingDate': '2018-04-04T00:00:00',\n",
+       " 'RatingValue': '4',\n",
+       " 'RatingKey': 'fhrs_4_en-gb',\n",
+       " 'RatingDate': '2014-03-31T00:00:00',\n",
        " 'LocalAuthorityCode': '188',\n",
        " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
        " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
        " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
-       " 'scores': {'Hygiene': 5, 'Structural': 5, 'ConfidenceInManagement': 5},\n",
+       " 'scores': {'Hygiene': 5, 'Structural': 5, 'ConfidenceInManagement': 10},\n",
        " 'SchemeType': 'FHRS',\n",
-       " 'geocode': {'longitude': 1.195625, 'latitude': 51.083812},\n",
+       " 'geocode': {'longitude': '1.196408', 'latitude': '51.086058'},\n",
        " 'RightToReply': '',\n",
-       " 'Distance': 4591.765489457773,\n",
+       " 'Distance': 4591.821311183521,\n",
        " 'NewRatingPending': False,\n",
        " 'meta': {'dataSource': None,\n",
        "  'extractDate': '0001-01-01T00:00:00',\n",
@@ -496,10 +495,10 @@
        "  'pageSize': 0,\n",
        "  'pageNumber': 0},\n",
        " 'links': [{'rel': 'self',\n",
-       "   'href': 'https://api.ratings.food.gov.uk/establishments/1043695'}]}"
+       "   'href': 'https://api.ratings.food.gov.uk/establishments/647177'}]}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,17 +528,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "id": "fd4112ce",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "UpdateResult({'n': 77574, 'nModified': 1, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
+       "UpdateResult({'n': 38786, 'nModified': 38786, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,17 +564,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "id": "04430a5b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "UpdateResult({'n': 0, 'nModified': 0, 'ok': 1.0, 'updatedExisting': False}, acknowledged=True)"
+       "UpdateResult({'n': 4091, 'nModified': 4091, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,17 +587,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "id": "92524ccc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "UpdateResult({'n': 77574, 'nModified': 1, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
+       "UpdateResult({'n': 38786, 'nModified': 34695, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 42,
    "id": "0deacaf9",
    "metadata": {},
    "outputs": [
